--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
     <h1>Hello, world!</h1>
     <h2>May dinagdag ako </h2>
+    <h3>This is a new line</h3>
+    <h3>This is a new line</h3>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
