--- a/books-viewingPage.html
+++ b/books-viewingPage.html
@@ -201,7 +201,7 @@
                                                     </div>
                                                     <div class="col-md-8">
                                                         <div class="card-body">
-                                                            <h5 class="card-title">Janna Macatangay</h5>
+                                                            <h5 class="card-title" style="margin-top: -10px;">Janna Macatangay</h5>
                                                             <p class="card-text">This is a wider card with supporting
                                                                 text below as a natural lead-in to additional content.
                                                                 This content is a little bit longer.</p>
@@ -223,7 +223,7 @@
                                                     </div>
                                                     <div class="col-md-8">
                                                         <div class="card-body">
-                                                            <h5 class="card-title">Janna Macatangay</h5>
+                                                            <h5 class="card-title" style="margin-top: -10px;">Janna Macatangay</h5>
                                                             <p class="card-text">This is a wider card with supporting
                                                                 text below as a natural lead-in to additional content.
                                                                 This content is a little bit longer.</p>
@@ -245,7 +245,7 @@
                                                     </div>
                                                     <div class="col-md-8">
                                                         <div class="card-body">
-                                                            <h5 class="card-title">Janna Macatangay</h5>
+                                                            <h5 class="card-title" style="margin-top: -10px;">Janna Macatangay</h5>
                                                             <p class="card-text">This is a wider card with supporting
                                                                 text below as a natural lead-in to additional content.
                                                                 This content is a little bit longer.</p>
@@ -296,7 +296,7 @@
                                                     </div>
                                                     <div class="col-8">
                                                         <div class="card-body">
-                                                            <h5 class="card-title">Janna Macatangay</h5>
+                                                            <h5 class="card-title" style="margin-top: -10px;">Janna Macatangay</h5>
                                                             <p class="card-text">This is a wider card with supporting
                                                                 text below as a natural lead-in to additional content.
                                                                 This content is a little bit longer.</p>
@@ -320,7 +320,7 @@
                                                     </div>
                                                     <div class="col-8">
                                                         <div class="card-body">
-                                                            <h5 class="card-title">Janna Macatangay</h5>
+                                                            <h5 class="card-title" style="margin-top: -10px;">Janna Macatangay</h5>
                                                             <p class="card-text">This is a wider card with supporting
                                                                 text below as a natural lead-in to additional content.
                                                                 This content is a little bit longer.</p>
